--- a/style.css
+++ b/style.css
@@ -1,13 +1,31 @@
+/* css for the whole site */
+
+body {
+	font-family:Arial, Helvetica, sans-serif !important;
+	background-color:#ffffff;
+}
+
+/* Header and footer */
+
+div.header {
+	font-size:20px;
+	color:#0000A0;
+}
+
+div.footer {
+	font-size:10px;
+	color:#3232d2;
+	position: absolute;
+	bottom: 0px;
+}
 /* menu for the system*/
 
-div.menu_system
-{
+div.menu_system {
 /*	width:100%;
 	height:63px;*/
 }
 
-div.menu_system ul
-{
+div.menu_system ul {
 	list-style-type:none;
 	margin:0;
 	padding:0;
@@ -16,19 +34,16 @@ div.menu_system ul
 	right: 0px;
 }
 
-div.menu_system li
-{
+div.menu_system li {
 	float:left;
 }
 
-div.menu_system a
-{
+div.menu_system a {
 	display:block;
 	width:86px;
 }
 
-div.menu_system a:link,div.menu_system a:visited
-{
+div.menu_system a:link,div.menu_system a:visited {
 	font-family:Arial;
 	font-size:10px;
 	color:#FFFFFF;
@@ -38,28 +53,24 @@ div.menu_system a:link,div.menu_system a:visited
 	text-decoration:none;
 }
 
-div.menu_system a:hover,div.menu_system a:active
-{
+div.menu_system a:hover,div.menu_system a:active {
 	background-color:#3232D2;
 }
 
 
 /* error message */
-div.error
-{
+div.error {
 	padding:2px 4px;
 	margin:0px;
 	border:solid 1px #FBD3C6;
 	background:#FDE4E1;
 	color:#CB4721;
-	font-family:Arial, Helvetica, sans-serif;
 	font-size:14px;
 	font-weight:bold;
 	text-align:center;
 }
 
-div.success
-{
+div.success {
 	padding:2px 4px;
 	margin:0px;
 	border:solid 1px #C0F0B9;
@@ -69,3 +80,19 @@ div.success
 	font-weight:bold;
 	text-align:center;
 }
+
+/* Required tags */
+div.required {
+	color:#ff0000;
+	font-weight:bold;
+}
+
+/* table definitions */
+table {
+	border-collapse:collapse;
+}
+
+table, th, td
+{
+	border: 1px solid #3232d2;
+
