--- a/style.css
+++ b/style.css
@@ -92,7 +92,31 @@ table {
 	border-collapse:collapse;
 }
 
-table, th, td
-{
+table, th, td {
 	border: 1px solid #3232d2;
+}
 
+td {
+	font-size:10px;
+}
+
+th {
+	font-size:11px;
+	font-weight:bold;
+}
+
+/* Experimenting with making an iPhone version of the code */
+
+@media screen and (max-device-width: 480px){
+    div.menu_system a:link,div.menu_system a:visited {
+		font-size:60px;
+	}
+	div.menu_system a {
+		width:200px;
+	}
+}
+
+/* Experimenting with an iPad version of the style sheet  as well */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+
+}
